[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slow_solutions = []
visualizations = []

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
indoc = "2.0.4"
itertools = "0.12.0"
lazy_static = "1.4.0"
num = "0.4.1"
rayon = "1.8.0"
regex = "1.10.2"
tap = "1.0.1"
